# oraculo

./: .gitignore  README.md  app.py  config.py  loaders.py  pyproject.toml  rag.py  requirements.txt  run.bat  session.py  vectorstore.py
